# ZipLogsAnonymizer

./: .gitignore  ZipLogsAnonymizer.spec  anonymizer.py  benchmark.py  build.py  gui.py  pattern_matcher.py  pattern_matcher_optimized.py  profile_anonymizer.py  readme.md  requirements.txt  rust_build_helper.py  test_anonymizer.py  test_performance.py
gui_assets/: index.html  styles.css  treemap.js
rust_core/: Cargo.toml  pyproject.toml
rust_core/src/: anonymizer.rs  lib.rs  patterns.rs
